# comfyui-llm-node-for-amazon-bedrock

./: README.md  __init__.py  pyproject.toml  requirements.txt
assets/: comfyui_on_sagemaker.yaml
nodes/: anytext.py  bedrock.py  bedrock_canvas.py  bedrock_luma_ray_video.py  bedrock_nova_image.py  bedrock_nova_video.py  bedrock_stability_3_image.py  bedrock_stability_image.py  bedrock_titan_image.py  file_utils.py  json.py  nova_image_gen.py  prompts.py  s3.py  session.py  textract.py  utils.py
workflows/: amazon_nova_canvas_nodes.json  amazon_stablity_ai.json  claude+t2i.json  claude3_image_caption.json  generate_image_variation.json  img2vid_nova_reel.json  inpainting_with_natural_language.json  lama.json  sensitive erase.json  subtitles_translate.json  text2img_with_prompt_refinement.json  text2vid_luma_ray2.json  text2vid_nova_reel.json  variation_with_caption.json
